--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="../Bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="../CSS/home.css">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="Bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="CSS/home.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
-    <script src="../Bootstrap/bootstrap.bundle.min.js"></script>
-    <script src="../Bootstrap/jquery-3.7.1.js"></script>
+    <script src="Bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="Bootstrap/jquery-3.7.1.js"></script>
     <title>Home</title>
 </head>
 <body>
@@ -17,13 +17,13 @@
         <div class="header w-100 mb-5 px-3">
             <nav class="navbar w-100">
                 <div class="row w-100 d-flex justify-content-center align-items-center">
-                    <div class="col"><a href="../HTML/Home.html" class="logo text-white navbar-brand">Feane</a></div>
+                    <div class="col"><a href="HTML/Home.html" class="logo text-white navbar-brand">Feane</a></div>
                     <div class="col">
                         <ul class="nav navbar">
-                            <li class="nav-item"><a class="nav-link text-white" href="../HTML/Home.html">HOME</a></li>
-                            <li class="nav-item"><a class="nav-link text-white" href="../HTML/Menu.html">MENU</a></li>
-                            <li class="nav-item"><a class="nav-link text-white" href="../HTML/About.html">ABOUT</a></li>
-                            <li class="nav-item"><a class="nav-link text-white" href="../HTML/BookTable.html">BOOK TABLE</a></li>
+                            <li class="nav-item"><a class="nav-link text-white" href="HTML/Home.html">HOME</a></li>
+                            <li class="nav-item"><a class="nav-link text-white" href="HTML/Menu.html">MENU</a></li>
+                            <li class="nav-item"><a class="nav-link text-white" href="HTML/About.html">ABOUT</a></li>
+                            <li class="nav-item"><a class="nav-link text-white" href="HTML/BookTable.html">BOOK TABLE</a></li>
                         </ul>
                     </div>
                     <div class="col">
